# Gomoku

./: .gitignore  CMakeLists.txt  README.md  build.sh  train.sh
Inc/: AI.h  chessboard.h  game.h  main.h  train.h
Src/: AI.c  chessboard.c  game.c  main.c  threadPool.c  train.c
